# ppsspp

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md
Common/: CommonTypes.h
Common/Render/Text/: draw_text_sdl.h
Common/System/: Display.cpp  Display.h
Common/UI/: UIScreen.cpp  View.cpp
Core/: BBTrace.cpp  BBTrace.h  Config.cpp  Config.h  Core.vcxproj  Core.vcxproj.filters  MemMap.cpp  MemMap.h  MemMapFunctions.cpp  Opcode.h
Core/Debugger/: SymbolMap.cpp  SymbolMap.h
Core/ELF/: ElfReader.cpp
Core/HLE/: HLE.cpp  HLE.h  HLETables.cpp  ReplaceTables.cpp  ReplaceTables.h  sceKernelMemory.cpp  sceKernelModule.cpp  sceKernelThread.cpp  sceNetAdhoc.cpp
Core/HW/: MediaEngine.cpp
Core/MIPS/: MIPS.cpp  MIPSAnalyst.cpp  MIPSAnalyst.h  MIPSAsm.cpp  MIPSDebugInterface.cpp  MIPSDis.cpp  MIPSInt.cpp  MIPSIntVFPU.cpp  MIPSTables.cpp  MIPSTables.h
GPU/Vulkan/: GPU_Vulkan.cpp
SDL/: SDLGLGraphicsContext.cpp  SDLMain.cpp  macbundle.sh
UI/: EmuScreen.cpp  GameSettingsScreen.cpp  MainScreen.cpp  MainScreen.h  MiscScreens.cpp  NativeApp.cpp
Windows/: PPSSPP.sln  PPSSPP.vcxproj  main.cpp
android/: AndroidManifest.xml  build.gradle
android/jni/: Application.mk
assets/: gamecontrollerdb.txt
disasm/: BBTraceParser.cpp  BBTraceParser.hpp  BasicBlock.cpp  BasicBlock.hpp  BasicBlock_internal.hpp  BindConfig.cmake  CMakeLists.txt  FlameGraph.cpp  FlameGraph.hpp  Memory.cpp  MyArgument.cpp  MyArgument.hpp  MyDocument.cpp  MyDocument.hpp  MyDocument_internal.hpp  MyFunction.cpp  MyFunction.hpp  MyFunction_internal.hpp  MyInstruction.cpp  MyInstruction.hpp  MyInstruction_internal.hpp  Pseudo.cpp  README.md  Types.hpp  UseDef.cpp  UseDef.hpp  Yaml.cpp  Yaml.hpp  Yaml_internal.hpp  argh.h  disasm.vcxproj  disasm.vcxproj.filters  go.mod  go_bridge.c  go_bridge.cpp  go_bridge.h  main.cpp  main.go  main_test.cpp  simple_svg_1.0.0.hpp  (+1 more)
disasm/bridge/: bridge.go.in
disasm/include/: go_bridge.h
disasm/pspdisasm/: .gitignore  bridge.go.in  document.go  go.mod  main.go  pspdisasm  symbolmap.go
disasm/pspdisasm/binarysearchtree/: bst.go  bst_test.go
disasm/pspdisasm/bridge/: bridge.go.in  opcode.go
disasm/pspdisasm/internal/: analstate.go  bbtraceparser.go  document.go  funanalyzer.go
disasm/tests/: one_bb.txt
ext/native/tools/atlastool/: atlastool.vcxproj
ext/native/tools/zimtool/: zimtool.vcxproj
headless/: Headless.vcxproj
sora/: entries.inc  sora.cpp  sora.h
unittest/: UnitTests.vcxproj
